--- a/examples/train_full/qwen2_5vl_sft_modified.yaml
+++ b/examples/train_full/qwen2_5vl_sft_modified.yaml
@@ -1,5 +1,5 @@
 ### model
-model_name_or_path: /home/june/Code/new_llamafactory/saves/huggingface_origin/Qwen2-VL-2B-Instruct/
+model_name_or_path: Qwen2-VL-2B-Instruct
 image_max_pixels: 262144
 video_max_pixels: 16384
 trust_remote_code: true
@@ -16,7 +16,7 @@ deepspeed: examples/deepspeed/ds_z3_config.json
 ### dataset
 dataset: vinder_train_base
 template: qwen2_vl
-cutoff_len: 1024
+cutoff_len: 4096
 max_samples: 1000
 overwrite_cache: true
 preprocessing_num_workers: 16
