--- a/examples/train_full/qwen2_5vl_full_sft.yaml
+++ b/examples/train_full/qwen2_5vl_full_sft.yaml
@@ -1,15 +1,18 @@
 ### model
 model_name_or_path: Qwen/Qwen2.5-VL-7B-Instruct
-image_max_pixels: 262144
-video_max_pixels: 16384
+image_max_pixels: 12845056
+image_min_pixels: 3136
 trust_remote_code: true
 
 ### method
 stage: sft
 do_train: true
 finetuning_type: full
-freeze_vision_tower: true
-freeze_multi_modal_projector: true
+# freeze_vision_tower: true
+# freeze_multi_modal_projector: true
+# freeze_language_model: false
+freeze_vision_tower: false
+freeze_multi_modal_projector: false
 freeze_language_model: false
 deepspeed: examples/deepspeed/ds_z3_config.json
 
@@ -29,7 +32,7 @@ save_steps: 500
 plot_loss: true
 overwrite_output_dir: true
 save_only_model: false
-report_to: none  # choices: [none, wandb, tensorboard, swanlab, mlflow]
+report_to: wandb  # choices: [none, wandb, tensorboard, swanlab, mlflow]
 
 ### train
 per_device_train_batch_size: 1
