--- a/examples/train_full/qwen2_vl_sft_modified_base.yaml
+++ b/examples/train_full/qwen2_vl_sft_modified_base.yaml
@@ -1,15 +1,18 @@
 ### model
 model_name_or_path: /home/june/Code/new_llamafactory/saves/huggingface_origin/Qwen2-VL-2B-Instruct/
-image_max_pixels: 262144
-video_max_pixels: 16384
+image_max_pixels: 12845056
+image_min_pixels: 3136
 trust_remote_code: true
 
 ### method
 stage: sft
 do_train: true
 finetuning_type: full
-freeze_vision_tower: true
-freeze_multi_modal_projector: true
+# freeze_vision_tower: true
+# freeze_multi_modal_projector: true
+# freeze_language_model: false
+freeze_vision_tower: false
+freeze_multi_modal_projector: false
 freeze_language_model: false
 deepspeed: examples/deepspeed/ds_z3_config.json
 
@@ -29,13 +32,13 @@ save_steps: 63
 plot_loss: true
 overwrite_output_dir: saves/qwen2_vl-3b/vindr_sft_base
 save_only_model: false
-report_to: none  # choices: [none, wandb, tensorboard, swanlab, mlflow]
+report_to: wandb  # choices: [none, wandb, tensorboard, swanlab, mlflow]
 
 ### train
 per_device_train_batch_size: 8
 gradient_accumulation_steps: 8
 learning_rate: 3.0e-5
-num_train_epochs: 10.0
+num_train_epochs: 20.0
 lr_scheduler_type: cosine
 warmup_ratio: 0.1
 bf16: true
